# shine

./: .gitmodules  CMakeLists.txt  README.md
include/kivy/: CEngine.hpp  CGame.hpp  CRender.hpp  IEngine.h  IGame.h  IRender.h
include/shine/: .CEngine.hpp.swp  .IEngine.h.swp  CEngine.hpp  IEngine.h
src/: CEngine.cpp  CGame.cpp  CMakeLists.txt  CRender.cpp  Engine.cpp  main.cpp
tests/: CMakeLists.txt  main.cpp
